save avant modification de model ascanien

--- a/monBlog/accueil/templates/accueil/index.html
+++ b/monBlog/accueil/templates/accueil/index.html
@@ -10,8 +10,10 @@
     <div class="col">
       <h1>Salut à toi jeune entrepreneur !</h1>
       <p>
-        Ici, Tu as accées aux differentes fonctionnalités d'AscaBlog, comme Afficher ton profil, découvrir differents posts ou bien même ecrire ton propre Ascpost si tu as un compte !
-        Pour t'inscrire il suffit de cliquer <a href="/monActivite/Nouveau_Ascapost">ici !</a></p>
+        Ici, Tu as accées aux differentes fonctionnalités d'AscaBlog,
+        comme Afficher ton profil, découvrir differents posts ou bien même
+        ecrire ton propre Ascpost si tu as un compte !</p>
+        
     </div>
   </div>
 </div>
