--- a/monBlog/accueil/templates/accueil/sqlt.html
+++ b/monBlog/accueil/templates/accueil/sqlt.html
@@ -31,6 +31,24 @@
           <li class="nav-item">
             <a class="nav-link" href="/Decouvrir">Découvrir</a>
           </li>
+
+          {% if not request.user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link"  href="/comptes/inscription/"> Inscription</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"  href="/comptes/login/"> Connexion</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <p><a class="nav-link" href="/comptes/deconnexion/">Déconnexion</a></p>
+            </li>
+            {% if user.is_superuser %}
+              <li class="nav-item">
+                <p><a class="nav-link" href="/admin">Admin</a></p>
+              </li>
+            {% endif %}
+          {% endif %}
         </ul>
       </div>
     </div>
