--- a/monBlog/monActivite/templates/monActivite/monActivite_ind.html
+++ b/monBlog/monActivite/templates/monActivite/monActivite_ind.html
@@ -6,7 +6,7 @@
   <br>
 
   {% for article in articles %}
-    <h4><a href="article/{{article.titre}}">{{article.titre}}</a></h4>
+    <h4><a href="/monActivite/article/{{article.id}}">{{article.titre}}</a></h4>
     <p>{{article.description_courte}}</p>
   {% endfor %}
 
