--- a/monBlog/monActivite/templates/monActivite/profilAscanien_ind.html
+++ b/monBlog/monActivite/templates/monActivite/profilAscanien_ind.html
@@ -1,2 +1,10 @@
-{% extends 'monActivite/monActivite_ind.html' %}
-test
+{% extends 'accueil/index.html' %}
+{% block titre %}
+
+C'est le profil de : {{auteur}}
+
+{% endblock %}
+
+{% block soustitre %}
+Voici les differents posts
+{% endblock %}!
