--- a/monBlog/monActivite/templates/monActivite/article_ind.html
+++ b/monBlog/monActivite/templates/monActivite/article_ind.html
@@ -7,7 +7,7 @@
         {% csrf_token %}
 
         {{ article.titre }}
-        <img src="/{{article.image}}" alt="{{article.image}}" width="500" height="600">
+        <img src="/{{article.image}}" alt="/{{article.image}}" width="500" height="600">
         {{ article.description_longue }}
         {{ article.auteur }}
         {{ article.date }}
