--- a/monBlog/monActivite/templates/monActivite/monActivite_ind.html
+++ b/monBlog/monActivite/templates/monActivite/monActivite_ind.html
@@ -30,3 +30,5 @@ Mes AscaPosts
     {% endif %}
   {% endfor %}
 {% endblock %}
+
+{% block postvide %}<p class="card-text">Cliques sur le bouton pour créer ton premier AscaPost !</p>{% endblock %}
