--- a/monBlog/comptes/templates/comptes/connexion.html
+++ b/monBlog/comptes/templates/comptes/connexion.html
@@ -5,13 +5,22 @@
   <div class="text-center">
     <div class="text-center">
       <h4>Connexion</h4>
-      <form class="site-form" action="{% url 'comptes:connexion'}" method="POST">
+      <form class="site-form" action="/comptes/login/" method="POST">
         {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Connexion">
-      </form>
-    </div>
+        <div class="form-group">
+          {{form.username.errors}}
+          <label for="id_titre">Pseudo :</label>
+          {{form.username}}
+        </div>
+        <div class="form-group">
+          {{form.password.errors}}
+          <label for="id_image">Mot de passe :</label>
+          {{form.password}}
+        </div>
+        <button type="submit" class="btn btn-primary">S'inscrire</button>
+         </form>
+         <a href="/comptes/login/">Se connecter</a>
+        </div>
   </div>
 </div>
-
 {% endblock %}
